# emv-parser-serializer

./: .gitignore  Makefile  PLAN.md  README.md  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
gui/: app.py  test1.py  test2.py
interface/: button_parser.spec
interface/ui/: input_panel.py
parser/: correct.txt  parse_tree.py  test.txt  test2.txt  tree_output.txt  tree_output2.txt
scripts/: merge_dictionaries.py
src/adapters/: config_adapter.js  zvt_adapter.js
src/core/: tlv_node.js  tlv_parser.js  tlv_serializer.js  tlv_utils.js
src/decoders/: bitmask_decoder.js  value_decoder.js
src/dictionaries/: emvco_tags.json  index.js
src/emv_tlv/: __init__.py
src/emv_tlv/adapters/: __init__.py  config_adapter.py  zvt_adapter.py
src/emv_tlv/core/: __init__.py  tlv_node.py  tlv_parser.py  tlv_serializer.py
src/emv_tlv/decoders/: __init__.py  bitmask_decoder.py  value_decoder.py
src/emv_tlv/dictionaries/: __init__.py  emvco_tags.json  tags (4).json  zka_tags.json
src/emv_tlv/validators/: __init__.py  format_validator.py  semantic_validator.py  structure_validator.py  types.py
tests/: api.test.js  config.test.js  decoder.test.js  parser.test.js  serializer.test.js  test_api.py  test_config.py  test_decoder.py  test_optimizations.py  test_parent_validation.py  test_serializer.py  test_tlv_node.py  test_unknown_tags.py  test_zvt.py  zvt.test.js
ui/: button_parser.py
